--- a/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile.config
+++ b/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile.config
@@ -44,9 +44,9 @@ BLAS := fujitsuBLAS
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-PYTHON_INCLUDE := /opt/klocal/Python-2.7.3/include/python2.7/ \
-               /opt/klocal/Python-2.7.3/lib/python2.7/site-packages/numpy/core/include \
-               /opt/klocal/Python-2.7.3/lib/python2.7/site-packages/numpy/core/include/numpy
+PYTHON_INCLUDE := /scratch/ra000022/hpcu/local/include/python2.7 \
+               /scratch/ra000022/hpcu/local/lib/python2.7/site-packages/numpy/core/include/ \
+               /scratch/ra000022/hpcu/local/lib/python2.7/site-packages/numpy/core/include/numpy/ \
 
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
@@ -64,8 +64,8 @@ PYTHON_LIB := /opt/klocal/Python-2.7.3/lib
 WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /opt/FJSVtclang/GM-1.2.0-19/include /opt/FJSVtclang/GM-1.2.0-19/include/c++/std /opt/FJSVtclang/GM-1.2.0-19/include/c++ /opt/FJSVXosDevkit/sparc64fx/target/usr/include /home/ra000022/a03330/install/usr/local/include /opt/rist/boost-1.47.0/include /opt/aics/netcdf/k-serial-noszip/include
-LIBRARY_DIRS := $(PYTHON_LIB) /opt/FJSVtclang/GM-1.2.0-19/lib /opt/FJSVtclang/GM-1.2.0-19/lib64 /home/ra000022/a03330/install/usr/local/lib /opt/rist/boost-1.47.0/lib /opt/aics/netcdf/k-serial-noszip/lib
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /opt/FJSVtclang/GM-1.2.0-20/include /opt/FJSVtclang/GM-1.2.0-20/include/c++/std /opt/FJSVtclang/GM-1.2.0-20/include/c++ /opt/FJSVXosDevkit/sparc64fx/target/usr/include $$HOME/install/usr/local/include /scratch/ra000022/boost/include /opt/aics/netcdf/k-serial-noszip/include
+LIBRARY_DIRS := $(PYTHON_LIB) /opt/FJSVtclang/GM-1.2.0-20/lib64 /opt/FJSVtclang/GM-1.2.0-20/lib $$HOME/install/usr/local/lib  /scratch/ra000022/boost/lib /opt/aics/netcdf/k-serial-noszip/lib
 
 # Uncomment to use `pkg-config` to specify OpenCV library paths.
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
