make test is successfull.

--- a/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile
+++ b/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile
@@ -37,7 +37,7 @@ TEST_MAIN_SRC := src/$(PROJECT)/test/test_caffe_main.cpp
 TEST_SRCS := $(shell find src/$(PROJECT) -name "test_*.cpp")
 TEST_SRCS := $(filter-out $(TEST_MAIN_SRC), $(TEST_SRCS))
 TEST_CU_SRCS := $(shell find src/$(PROJECT) -name "test_*.cu")
-GTEST_SRC := src/gtest/gtest-all.cpp
+GTEST_SRC :=
 # TOOL_SRCS are the source files for the tool binaries
 TOOL_SRCS := $(shell find tools -name "*.cpp")
 # EXAMPLE_SRCS are the source files for the example binaries
