--- a/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile.config
+++ b/fast-rcnn-k/fast-rcnn/caffe-fast-rcnn/Makefile.config
@@ -64,8 +64,8 @@ PYTHON_LIB := /opt/klocal/Python-2.7.3/lib
 WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /opt/FJSVtclang/GM-1.2.0-20/include /opt/FJSVtclang/GM-1.2.0-20/include/c++/std /opt/FJSVtclang/GM-1.2.0-20/include/c++ /opt/FJSVXosDevkit/sparc64fx/target/usr/include $$HOME/install/usr/local/include /scratch/ra000022/boost/include /opt/aics/netcdf/k-serial-noszip/include
-LIBRARY_DIRS := $(PYTHON_LIB) /opt/FJSVtclang/GM-1.2.0-20/lib64 /opt/FJSVtclang/GM-1.2.0-20/lib $$HOME/install/usr/local/lib  /scratch/ra000022/boost/lib /opt/aics/netcdf/k-serial-noszip/lib
+INCLUDE_DIRS := $(PYTHON_INCLUDE) $$HOME/install/usr/local/include /scratch/ra000022/boost/include /opt/aics/netcdf/k-serial-noszip/include
+LIBRARY_DIRS := $(PYTHON_LIB) /opt/FJSVtclang/GM-1.2.0-20/lib64 /opt/FJSVtclang/GM-1.2.0-20/lib $$HOME/install/usr/local/lib  /scratch/ra000022/boost/lib.release /opt/aics/netcdf/k-serial-noszip/lib
 
 # Uncomment to use `pkg-config` to specify OpenCV library paths.
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
@@ -75,7 +75,7 @@ BUILD_DIR := build
 DISTRIBUTE_DIR := distribute
 
 # Uncomment for debugging. Does not work on OSX due to https://github.com/BVLC/caffe/issues/171
-DEBUG := 1
+DEBUG := 0
 
 # The ID of the GPU that 'make runtest' will use to run unit tests.
 TEST_GPUID := 0
